[gd_scene load_steps=7 format=2]

[ext_resource path="res://GFX/EthanHGSSwalkdown.png" type="Texture" id=1]
[ext_resource path="res://Enemys/Enemy_default_struct.gd" type="Script" id=2]
[ext_resource path="res://Items/Bullet.tscn" type="PackedScene" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.83453, 12.6704 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 482.86, 263 )

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 2 )
Bullet = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 932, 472 )
scale = Vector2( 4.34375, 4.17188 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 931.281, 483.141 )
scale = Vector2( 4.34375, 4.17188 )
shape = SubResource( 2 )

[node name="SaidaTiro" type="Position2D" parent="."]
position = Vector2( 931, 483 )

[node name="Cooldown_walk" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Cooldown_shoot" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 736, 582 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 624.14, 65 )
shape = SubResource( 3 )

[connection signal="timeout" from="Cooldown_shoot" to="." method="_on_Cooldown_shoot_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
